2005-10-24  Elijah Newren  <newren@gmail.com>

	Fix keyboard resizing and bouncing weirdness with mouse movement,
	and cleanup the crap from the last patch.  We should now have bug
	#154670 fixed, and bug #124582 and bug #122670 should be much less
	severe.  Fixing will require removing the pointer warping,
	disabling doing both keyboard and mouse moving/resizing
	interchangeably, or something else even more drastic.

	* src/display.h (struct MetaDisplay):
	* src/display.c (meta_display_begin_grab_op):
	* src/window.c (meta_window_handle_mouse_grab_op_event):
	Remove changes made in last patch in regards to the new
	display->grab_ignore_enter_leave_until_mouse_motion field

	* src/window.c:

	(meta_window_handle_mouse_grab_op_event):
	#ifdef out the EnterNotify/LeaveNotify events so that they don't
	bust things

	(warp_grab_pointer):
	clamp the new position to be within the screen coordinates, set
	grab_latest_motion_(x|y) and grab_anchor_window_pos.(width|height)
	as well

	(meta_window_update_keyboard_resize):
	remove the manual fixup to handle pointer warping since that code
	is now in warp_grab_pointer (it wasn't complete here anyway, and
	also needed to be done for move operations)

2005-10-23  Elijah Newren  <newren@gmail.com>

	Fix (both keyboard and mouse) snap-moving from erroneously
	operating multi-dimensionally.  #124582.

	* src/display.h (struct MetaDisplay): to avoid some flickering,
	add a grab_ignore_enter_leave_until_mouse_motion field

	* src/display.c (meta_display_begin_grab_op): Initialize
	display->grab_ignore_enter_leave_until_mouse_motion

	* src/window.c (update_move): get the old position of the window
	and only do snap moving if the position has changed, also fix a
	horizontal/vertical maximization positioning bug,
	(meta_window_handle_mouse_grab_op_event): handle
	display->grab_ignore_enter_leave_until_mouse_motion,
	(warp_grab_pointer): update the grab position so that the mouse